--- a/final-proyecto-MIO/build.gradle
+++ b/final-proyecto-MIO/build.gradle
@@ -6,6 +6,12 @@ subprojects {
     apply plugin: 'java'
     apply plugin: 'com.zeroc.gradle.ice-builder.slice'
 
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(17) //Esto obliga que usemos Java 17
+        }
+    }
+
     repositories {
         mavenCentral()
     }
