Connection config fixed with the computers IASLAB ip

--- a/final-proyecto-MIO/server/src/main/resources/server.config
+++ b/final-proyecto-MIO/server/src/main/resources/server.config
@@ -1,4 +1,4 @@
-ConnectionAdapter.Endpoints=default -h localhost -p 9090
+ConnectionAdapter.Endpoints=default -h 192.168.131.104 -p 9090
 
 Ice.ThreadPool.Server.Size=5
 Ice.ThreadPool.Server.SizeMax=50
