--- a/final-proyecto-MIO/MIO/src/main/resources/MIO.config
+++ b/final-proyecto-MIO/MIO/src/main/resources/MIO.config
@@ -1,1 +1,1 @@
-serverconnection.Proxy=serverconnection:default -h 192.168.131.104 -p 9090
+serverconnection.Proxy=serverconnection:default -h localhost -p 9090
