--- a/final-proyecto-MIO/client/src/main/resources/client.config
+++ b/final-proyecto-MIO/client/src/main/resources/client.config
@@ -1,1 +1,1 @@
-serverconnection.Proxy=serverconnection:default -h 192.168.131.104 -p 9090
+serverconnection.Proxy=serverconnection:default -h localhost -p 9090
